monticore-generator/src/test/resources/cocos/invalid/A4031/A4031c.mc4
package cocos.invalid.A4031;

grammar A4031c {
  interface a;

}